--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "toastr": "^2.1.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vue-toast-notification": "^0.4.0"
+    "vue-toast-notification": "^0.4.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
