--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "dotenv": "^8.2.0",
     "toastr": "^2.1.4",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
